--- a/src/home.html
+++ b/src/home.html
@@ -1,19 +1,36 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<meta name="HandheldFriendly" content="true" />
-	    <meta name="viewport" content="width=device-width, height=device-height" />
-        <title>LX Bus - Lisbon Bus Information</title>
-        <link href='http://fonts.googleapis.com/css?family=Molengo|Cantarell' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="css/screen.css" media="only screen and (min-device-width:1024px)"/>
-		<link rel="stylesheet" href="css/handheld.css" media="only screen and (max-device-width:480px)"/>
-		<link rel="stylesheet" href="css/handheld.css" media="only handheld"/>
-		<link href="css/common.css" rel="stylesheet" type="text/css">
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
-        <script type="text/javascript" src="js/lxbus.js"></script>
-        <script type="text/javascript" src="js/lxbus.db.js"></script>
-    </head>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="HandheldFriendly" content="true" />
+    <meta name="viewport" content="width=device-width, height=device-height" />
+    <title>LX Bus - Lisbon Bus Information</title>
+    <link href='http://fonts.googleapis.com/css?family=Molengo|Cantarell' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/screen.css" media="only screen and (min-device-width:1024px)"/>
+    <link rel="stylesheet" href="css/handheld.css" media="only screen and (max-device-width:480px)"/>
+    <link rel="stylesheet" href="css/handheld.css" media="only handheld"/>
+    <link href="css/common.css" rel="stylesheet" type="text/css">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript">
+    </script>
+    <script type="text/javascript" src="js/lxbus.js">
+    </script>
+    <script type="text/javascript" src="js/lxbus.db.js">
+    </script>
+    <script type="text/javascript">
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-19224352-1']);
+        _gaq.push(['_trackPageview']);
+        
+        (function(){
+            var ga = document.createElement('script');
+            ga.type = 'text/javascript';
+            ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(ga, s);
+        })();
+    </script>
+</head>
     <body>
     	<img class="betaribbon" src="img/ribbon.gif" alt="Beta" />
 		
