Removed beta ribbon Minor coding style improvements

--- a/tests/test.html
+++ b/tests/test.html
@@ -151,12 +151,12 @@
             &nbsp;
         </p>
         <p class="Info">
-            AtÃ© breve!
+            Até breve!
         </p>
         <p class="footer">
             SMS Carris
             <br>
-            telemÃ³vel:
+            telemóvel:
             3599
             <br>
             email: <a href="mailto:sms@carris.pt">sms@carris.pt</a>
